--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,24 +3,37 @@
     package="com.twofours.surespot"
     android:versionCode="1"
     android:versionName="1.0" >
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="16" />
 
     <application
+        android:name="com.twofours.surespot.SurespotApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.twofours.surespot.Login"
+            android:name="com.twofours.surespot.LoginActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.twofours.surespot.MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.twofours.surespot.CredentialManagementActivity"
+            android:label="@string/title_activity_credential_management" >
         </activity>
     </application>
 
