--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,11 +18,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.twofours.surespot.LoginActivity"
+            android:name="com.twofours.surespot.activities.LoginActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.MainActivity"
+            android:name="com.twofours.surespot.activities.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter>
@@ -32,12 +32,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.twofours.surespot.SignupActivity"
-            android:label="@string/title_activity_credential_management" >
+            android:name="com.twofours.surespot.activities.SignupActivity"
+            android:label="@string/title_activity_signup" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.FriendsActivity"
+            android:name="com.twofours.surespot.activities.FriendsActivity"
             android:label="@string/title_activity_friends" >
+        </activity>
+          <activity
+            android:name="com.twofours.surespot.activities.NotificationsActivity"
+            android:label="@string/title_activity_notifications" >
         </activity>
     </application>
 
