--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,15 +16,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock" >
+        android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
         <activity
             android:name="com.twofours.surespot.activities.LoginActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.twofours.surespot.activities.StartupActivity"
-            android:label="@string/title_activity_main"
-            android:theme="@android:style/Theme.NoDisplay" >
+            android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,9 +34,8 @@
             android:name="com.twofours.surespot.activities.SignupActivity"
             android:label="@string/title_activity_signup" >
         </activity>
-
         <activity
-            android:name="com.twofours.surespot.activities.MainActivity"            
+            android:name="com.twofours.surespot.activities.MainActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
