tell activity about notification click

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.activities.StartupActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main" 
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
