--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,11 +37,13 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
         </activity>
          <activity
             android:name="com.twofours.surespot.activities.ChatActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
         </activity>
     </application>
 
