--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
         <activity
-            android:name="com.twofours.surespot.activities.StartupActivity"
+            android:name="com.twofours.surespot.ui.activities.StartupActivity"
             android:label="@string/title_activity_main"
             android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter>
@@ -28,15 +28,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.twofours.surespot.activities.SignupActivity"
+            android:name="com.twofours.surespot.ui.activities.SignupActivity"
             android:label="@string/title_activity_signup" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.activities.LoginActivity"
+            android:name="com.twofours.surespot.ui.activities.LoginActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.activities.MainActivity"
+            android:name="com.twofours.surespot.ui.activities.MainActivity"
             android:label="@string/app_name">
         </activity>
     </application>
