--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.ui.activities.MainActivity"
+            android:name="com.twofours.surespot.main.MainActivity"
             android:label="@string/app_name">
         </activity>
     </application>
