--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,7 +37,11 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.main.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.twofours.surespot.chat.ChatActivity"
+            android:label="@string/title_activity_chat" >
         </activity>
     </application>
 
