--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="lib" path="/opt/android-sdk/extras/android/support/v4/android-support-v4.jar" sourcepath="/opt/android-sdk/extras/android/support/v4/src"/>
 	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
-	<classpathentry kind="lib" path="libs/WebSocket.jar"/>
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
 	<classpathentry kind="lib" path="libs/1.4.2-17-g65dc6f2-dirty.jar" sourcepath="/home/adam/src/android-async-http/src"/>
+	<classpathentry kind="lib" path="libs/java_websocket.jar" sourcepath="/home/adam/src/Java-WebSocket"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/library"/>
 	<classpathentry excluding="com/twofours/surespot/chat/ChatArrayAdapter.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
