--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
+target=android-17
 android.library.reference.1=../github/2fours/ActionBarSherlock/library
 android.library=false
 android.library.reference.2=../github/2fours/android-async-http
+android.library.reference.3=../socket.io.glue
