--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,13 +60,13 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.main.MainActivity"
+            android:name="com.twofours.surespot.friends.FriendActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.twofours.surespot.chat.ChatActivity"
-            android:label="@string/title_activity_chat"
+            android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
         </activity>
     </application>
