Use ViewPagerIndicator Sample image smaller Size image in layout Use same cache for all images across app. Handle device not having GCM stuff.

--- a/project.properties
+++ b/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=../libs/android/github/2fours/android-async-http
 android.library=false
 android.library.reference.2=../libs/android/github/2fours/ActionBarSherlock/library
 android.library.reference.3=../libs/android/socket.io.glue
+android.library.reference.4=../libs/android/github/2fours/Android-ViewPagerIndicator/library
