--- a/.classpath
+++ b/.classpath
@@ -2,16 +2,16 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="/opt/android-sdk/extras/android/support/v4/android-support-v4.jar" sourcepath="/opt/android-sdk/extras/android/support/v4/src"/>
 	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
 	<classpathentry kind="lib" path="libs/guava-14.0-rc2.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/library"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/socket.io-java-client"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/socket.io.glue"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/viewpagerindicator"/>
 	<classpathentry excluding="com/twofours/surespot/chat/ChatArrayAdapter.java|io/socket/WebSocketClient.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
