--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,13 +52,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <intent-filter>
-            <action android:name="android.intent.action.SEND" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <data android:mimeType="image/*" />
-            </intent-filter>
+                <action android:name="android.intent.action.SEND" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="image/*" />
+            </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -88,6 +88,8 @@
         <activity
             android:name="com.twofours.surespot.chat.ChatActivity"
             android:label="@string/app_name"
+            
+            android:theme="@style/Theme.surespottabs"
             android:windowSoftInputMode="stateHidden" >
         </activity>
     </application>
