--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,7 @@
     <application
         android:name="com.twofours.surespot.SurespotApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"        
         android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
@@ -82,14 +81,11 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.friends.FriendActivity"
-            android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name="com.twofours.surespot.chat.ChatActivity"
-            android:label="@string/app_name"
-            
-            android:theme="@style/Theme.surespottabs"
+            android:name="com.twofours.surespot.chat.ChatActivity"            
+            android:theme="@style/Theme.surespot"
             android:windowSoftInputMode="stateHidden" >
         </activity>
     </application>
