--- a/.classpath
+++ b/.classpath
@@ -7,12 +7,13 @@
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
 	<classpathentry kind="lib" path="libs/guava-14.0-rc2.jar"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/acra-4.4.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/socket.io-java-client"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/socket.io.glue"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/viewpagerindicator"/>
-	<classpathentry excluding="com/twofours/surespot/chat/ChatArrayAdapter.java|io/socket/WebSocketClient.java" kind="src" path="src"/>
+	<classpathentry excluding="com/twofours/surespot/chat/ChatArrayAdapter.java|io/socket/WebSocketClient.java|com/twofours/surespot/ImageViewActivity.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
