--- a/project.properties
+++ b/project.properties
@@ -17,3 +17,4 @@ android.library=false
 android.library.reference.2=../libs/android/github/2fours/ActionBarSherlock/library
 android.library.reference.3=../libs/android/socket.io.glue
 android.library.reference.4=../libs/android/github/2fours/Android-ViewPagerIndicator/library
+android.library.reference.5=../libs/android/github/2fours/ImageViewZoom/ImageViewTouch
