--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
-	<classpathentry kind="lib" path="libs/guava-14.0-rc2.jar"/>
+	<classpathentry kind="lib" path="libs/guava-14.0-rc2.jar" sourcepath="/home/adam/src/guava-libraries/guava/src"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/actionbarsherlock"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/android-async-http"/>
