--- a/project.properties
+++ b/project.properties
@@ -18,3 +18,4 @@ android.library.reference.2=../libs/android/github/forks/ActionBarSherlock/libra
 android.library.reference.3=../libs/android/github/forks/android-async-http
 android.library.reference.4=../libs/android/github/forks/ImageViewZoom/ImageViewTouch
 android.library.reference.5=../libs/android/github/forks/Android-ViewPagerIndicator/library
+android.library.reference.6=../libs/android/common
