Cache credentials in service to enable identity decryptios without having to type in the password every time the app starts.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,7 @@
         </receiver>
 
         <service android:name="com.twofours.surespot.GCMIntentService" />
+        <service android:name="com.twofours.surespot.services.CredentialCachingService" android:exported="false"></service>
 
         <activity
             android:name="com.twofours.surespot.activities.StartupActivity"
