--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/dev/surespot/libs/android/github/forks/spongycastle"/>
-	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.2.jar" sourcepath="/home/adam/src/spongycastle"/>
 	<classpathentry kind="lib" path="libs/gcm.jar"/>
 	<classpathentry kind="lib" path="libs/guava-14.0-rc2.jar" sourcepath="/home/adam/src/guava-libraries/guava/src"/>
 	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
@@ -15,5 +13,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SSLWebSocket"/>
+	<classpathentry kind="lib" path="libs/sc-light-jdk15on-1.47.0.3-SNAPSHOT.jar" sourcepath="/home/adam/dev/surespot/libs/android/github/forks/spongycastle"/>
+	<classpathentry kind="lib" path="libs/scprov-jdk15on-1.47.0.3-SNAPSHOT.jar" sourcepath="/home/adam/dev/surespot/libs/android/github/forks/spongycastle"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
