--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -84,7 +84,9 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.activities.SignupActivity"
-            android:label="@string/title_activity_signup" >
+            android:label="@string/title_activity_signup" 
+            android:launchMode="singleTask"
+            >
             <intent-filter>
                 <action android:name="com.twofours.surespot.activities.SignupActivity" />
 
