--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="10" />
 
     <permission
         android:name="com.twofours.surespot.permission.C2D_MESSAGE"
@@ -88,7 +88,7 @@
         </activity>
         <activity
             android:name="com.twofours.surespot.activities.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="login" >
         </activity>
         <activity
             android:name="com.twofours.surespot.friends.FriendActivity"
