--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,9 +52,11 @@
             android:name="com.twofours.surespot.services.CredentialCachingService"
             android:exported="false" >
         </service>
-          <activity
+
+        <activity
             android:name="com.twofours.surespot.activities.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,10 +76,10 @@
 
                 <data android:mimeType="text/plain" />
             </intent-filter>
-            
         </activity>
 
-       <!--  <activity
+        <!--
+        <activity
             android:name="com.twofours.surespot.activities.StartupActivity"
             android:label="@string/title_activity_main"
             android:theme="@android:style/Theme.NoDisplay" >
@@ -87,7 +89,8 @@
             <category android:name="android.intent.category.DEFAULT" />
             <data android:mimeType="image/*" />
             </intent-filter>
-        </activity> -->
+        </activity>
+        -->
         <activity
             android:name="com.twofours.surespot.activities.SignupActivity"
             android:label="@string/title_activity_signup" >
@@ -141,7 +144,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-      
     </application>
 
 </manifest>
