--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,16 @@
             </intent-filter>
         </receiver>
 
+        <!-- Used for install referral measurement -->
+        <service android:name="com.google.analytics.tracking.android.CampaignTrackingService" />
+
+        <receiver
+            android:name="com.twofours.surespot.SurespotBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER" />
+            </intent-filter>
+        </receiver>
+
         <service android:name="com.twofours.surespot.services.GCMIntentService" />
         <service
             android:name="com.twofours.surespot.services.CredentialCachingService"
@@ -113,7 +123,7 @@
         </activity>
         -->
         <activity android:name="com.twofours.surespot.images.ImageViewActivity" >
-        </activity>     
+        </activity>
         <activity
             android:name="com.twofours.surespot.images.ImageSelectActivity"
             android:windowSoftInputMode="stateAlwaysHidden" >
@@ -132,7 +142,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="com.twofours.surespot.identity.ImportIdentityActivity">
+        <activity android:name="com.twofours.surespot.identity.ImportIdentityActivity" >
             <intent-filter>
                 <action android:name="com.twofours.surespot.identity.ImportIdentityActivity" />
 
@@ -145,6 +155,10 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.twofours.surespot.activities.ExternalInviteActivity"
+            android:label="@string/title_activity_external_invite" >
         </activity>
     </application>
 
